# SequencingReadDataSearch

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
aligned_read_search/: __init__.py  alignment.py  cli.py  mcp_server.py  models.py  query.py  search.py
aligned_read_search/archives/: __init__.py  base.py  ena.py  sra.py
skills/search-datasets/: SKILL.md
tests/: test_network.py  test_unit.py
